# phd-thesis

./: .gitignore  Makefile
bib/: bibliography.bib
fmt/: arrows.fmt  dots.fmt  macros.fmt  spaces.fmt  spl-thesis.fmt  symbols.fmt  syntax.fmt  variables.fmt
hs/: Format.hs  LICENSE  Main.hs  fmt.cabal
src/: 2lc.lhs  2stlc.lhs  3fix.lhs  4pattern.lhs  5systemf.lhs  6poly.lhs  7types.lhs  LICENSE  main.lhs
sty/: mathpartir.sty  spl-thesis.sty
