name:                   fmt
version:                0.1
-- synopsis:            
-- description:         
license:                BSD3
license-file:           LICENSE
author:                 Sean Leather
maintainer:             sean.leather@gmail.com
copyright:              (c) 2013 Sean Leather
category:               Text
build-type:             Simple
cabal-version:          >= 1.10

executable fmt
  main-is:              Main.hs
  other-modules:        Format
  build-depends:        base            >= 4.6  && < 4.9,
                        containers      >= 0.5  && < 0.6,
                        text            >= 0.11 && < 1.3
  default-language:     Haskell2010
